# micro-tcn

./: .gitignore  README.md  pyproject.toml
microtcn/: base.py  cli.py  comp.py  data.py  egfx.py  eval.py  export.py  loss.py  metrics.py  model.py  tcn.py  train.py
microtcn/cli/: __init__.py  comp.py  export.py  plot.py  speed.py  test.py  train.py
plugins/: Cargo.toml  README.md  install-macos.sh
plugins/tcn-bluesdriver/: Cargo.toml
plugins/tcn-bluesdriver/assets/: tcn.json
plugins/tcn-bluesdriver/src/: lib.rs
plugins/tcn-chorus/: Cargo.toml
plugins/tcn-chorus/assets/: tcn.json
plugins/tcn-chorus/src/: lib.rs
plugins/tcn-clap/: Cargo.toml  install-macos.sh
plugins/tcn-clap/examples/: bench.rs
plugins/tcn-clap/src/: lib.rs  model.rs
plugins/tcn-clap/xtask/: Cargo.toml
plugins/tcn-flanger/: Cargo.toml
plugins/tcn-flanger/assets/: tcn.json
plugins/tcn-flanger/src/: lib.rs
plugins/tcn-la2a/: Cargo.toml
plugins/tcn-la2a/assets/: tcn.json
plugins/tcn-la2a/examples/: bench.rs  bench_sizes.rs
plugins/tcn-la2a/src/: gui.rs  lib.rs
plugins/tcn-phaser/: Cargo.toml
plugins/tcn-phaser/assets/: tcn.json
plugins/tcn-phaser/src/: lib.rs
plugins/tcn-plugin-core/: Cargo.toml  build.rs
plugins/tcn-plugin-core/src/: lib.rs  model.rs
plugins/tcn-rat/: Cargo.toml
plugins/tcn-rat/assets/: tcn.json
plugins/tcn-rat/src/: lib.rs
plugins/tcn-spring-reverb/: Cargo.toml
plugins/tcn-spring-reverb/assets/: tcn.json
plugins/tcn-spring-reverb/src/: lib.rs
plugins/tcn-tubescreamer/: Cargo.toml
plugins/tcn-tubescreamer/assets/: tcn.json
plugins/tcn-tubescreamer/src/: lib.rs
plugins/xtask/: Cargo.toml
scripts/: egfx_pipeline.py
