[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "micro-tcn"
version = "0.1.0"
description = "Efficient neural networks for real-time modeling of analog dynamic range compression"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    { name = "Christian Steinmetz", email = "c.j.steinmetz@qmul.ac.uk" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "torch",
    "torchaudio",
    "torchsummary",
    "pytorch-lightning",
    "auraloss",
    "soundfile",
    "scipy",
    "numpy",
    "librosa",
    "matplotlib",
]

[project.optional-dependencies]
test = ["resampy"]

[project.urls]
Homepage = "https://github.com/csteinmetz1/micro-tcn"

[tool.setuptools]
packages = ["microtcn"]
include-package-data = true
