[package]
name = "tcn-bluesdriver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Neural Boss BD-2 Blues Driver overdrive. micro-TCN inference."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tcn-plugin-core = { path = "../tcn-plugin-core" }
clap-sys = { workspace = true }
