[package]
name = "tcn-chorus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Neural Boss CE-3 chorus. micro-TCN inference."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tcn-plugin-core = { path = "../tcn-plugin-core" }
clap-sys = { workspace = true }
