[package]
name = "tcn_clap"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Steven Murr"]
description = "Real-time neural compressor modeled on LA2A — micro-TCN inference."

[workspace]
members = [".", "xtask"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
strip = "symbols"
opt-level = 3
