[package]
name = "tcn-flanger"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Neural Mooer E-Lady flanger. micro-TCN inference."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tcn-plugin-core = { path = "../tcn-plugin-core" }
clap-sys = { workspace = true }
