[package]
name = "tcn-la2a"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Real-time neural compressor modeled on LA2A — micro-TCN inference."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tcn-plugin-core = { path = "../tcn-plugin-core" }
# Omit `assert_process_allocs` — in release it wraps the global allocator to
# abort on heap allocations during `process()`, which some DAWs treat as a
# fatal plugin fault and restart the instance in a crash loop.
nih_plug = { workspace = true }
nih_plug_egui = { workspace = true }
