[package]
name = "tcn-la2a"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Real-time neural compressor modeled on LA2A — micro-TCN inference."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tcn-plugin-core = { path = "../tcn-plugin-core" }
clap-sys = { workspace = true }
