[package]
name = "tcn-phaser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Neural MXR Phase 45 phaser. micro-TCN inference."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tcn-plugin-core = { path = "../tcn-plugin-core" }
clap-sys = { workspace = true }
