[package]
name = "tcn-plugin-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared TCN inference runtime + model-loading plumbing for nih-plug wrappers."

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cblas = { version = "0.4", default-features = false }
blas-src = { version = "0.10", features = ["accelerate"] }
