[package]
name = "tcn-rat"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Neural ProCo RAT2 distortion. micro-TCN inference."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tcn-plugin-core = { path = "../tcn-plugin-core" }
clap-sys = { workspace = true }
