[package]
name = "tcn-spring-reverb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Neural Orange CR-60 spring reverb. micro-TCN inference."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tcn-plugin-core = { path = "../tcn-plugin-core" }
clap-sys = { workspace = true }
